@@ -1,12 +1,12 @@
 http://youtu.be/pn_UTVdqans                - EDL Edit Window
-http://youtu.be/dvEiWKV3WSU                - Network connections
+http://youtu.be/dvEiWKV3WSU                - Network connections *
 http://www.youtube.com/watch?v=d92DTYv1TmM - Main Window UI *
 http://www.youtube.com/watch?v=zC7U6gdoDm4 - Topbar (color channels,
 					     gamma, gain, lut, etc) *
 http://www.youtube.com/watch?v=d7C8sAmnNJc - Color Info Window, Histogram, 
 					     Vectorscope *
-http://www.youtube.com/watch?v=1oHnEpYrgXw - Color Channels
-http://youtu.be/watch?v=UG8m6ZxsNcA        - mental ray interaction
-http://www.youtube.com/watch?v=YaXgJHf9hvs - Paint tools v2.5.7.0
-http://youtu.be/fZwdxzIfWBY                - ACES workflow
-http://youtu.be/A2zMjjKaDRY		   - ACES clip metadata usage
+http://www.youtube.com/watch?v=1oHnEpYrgXw - Color Channels *
+http://youtu.be/watch?v=UG8m6ZxsNcA        - mental ray interaction *
+http://www.youtube.com/watch?v=YaXgJHf9hvs - Paint tools v2.5.7.0 *
+http://youtu.be/fZwdxzIfWBY                - ACES workflow *
+http://youtu.be/A2zMjjKaDRY		   - ACES clip metadata usage *
