@@ -66,8 +66,7 @@ As of January 2015, AMPAS ships ACES 1.0, which is a collection of
 CTL transforms and these are included in the mrViewer distribution.
 
 <br>
-
-
+<br>
 
 Within mrViewer, two or more CTL files are processed and baked into a
 64x64x64 3D Lut which then operates on the image completely with 32-bit
