@@ -24,11 +24,19 @@
 
       <td>
 
+
       <br>
 The connections window allows you to control two or more mrViewers from a single interface, which can be useful for reviewing dailies.
       </tr>
   </tbody>
 </table>
+<br>
+<iframe title="YouTube video player" class="youtube-player" type="text/html" 
+width="640" height="390" src="http://www.youtube.com/embed/dvEiWKV3WSU"
+frameborder="0" allowFullScreen></iframe>
+<br>
+<br>
+
 To use it, you first need to create a server at an empty port.  The default of 4333 should be fine most of the time.
 Once a server is created, the clients can connect to it at that machine name and port.  The machine name defaults to localhost which is a local connection to the local machine (two viewers running on the same machine).  If accessing two viewers from different locations you need to specify the name of the remote machine as well as the port number.
 
