@@ -75,3 +75,11 @@ The EDL Window has a cut tool, next to the new reel tool, which allows cutting t
 There's also a merge tool (band-aid) to reverse the output of the cutting tool.  You place yourself near the edge of the cut and press the merge tool.  For the merge to be successful the movie files or sequences must be the same and the last frame of the left clip must match the start of the right clip.
 <br>
 Finally, the EDL Window has a BG button which places the currently selected timeline in the BG of the viewer.  This button is identical to the one in the Reel List window.
+<br>
+<br>
+
+<iframe title="YouTube video player" class="youtube-player" type="text/html" 
+width="640" height="390" src="http://www.youtube.com/embed/pn_UTVdqans"
+frameborder="0" allowFullScreen></iframe>
+
+<br>
